pushing is_completed into GroupScores as well, otherwise the group goal icon will never light up

--- a/vcweb/lighterprints/templates/lighterprints/email/scheduled-activity/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/scheduled-activity/group-summary-email.html
@@ -7,7 +7,7 @@ You are a member of {{ group_name }}. To participate in this experiment, visit <
 {% endif %}
 </p>
 <ul>
-    <li>You earned {{ individual_points }} points while the average in your group was {{ average_points }} point(s).</li>
+    <li>You earned <b>{{ individual_points }} points</b> and the average points per person in your group was <b>{{ average_points }}</b>.</li>
     <li>{{ number_of_chat_messages }} chat messages were posted by your group.</li>
     {% if show_rankings %}
     <li>Your group was ranked {{ group_rank}} out of {{ number_of_groups }}</li>
